<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">港港</string>
    <string name="action_settings">Settings</string>
    <string name="app_vision">2.0</string>
    
    
        <string name="str_paixu_moren">默認排序</string>
    <string name="str_paixu_haoping">好評優先</string>
    <string name="str_paixu_renqi">人氣最高</string>
    <string name="str_paixu_zuijin">離我最近</string>
    
    <string name="map_walk">步行</string>
    <string name="map_bus">公共交通</string>
    <string name="map_drives">駕車</string>
    <string name="business_advice">商家簡介</string>
    <string name="str_adv_go">開始體驗</string>
    <string name="progress_text">正在加載中...</string>
    <string name="fujinfendian">附近分店</string>
    <string name="allfendian">全部分店</string>
    <string name="str_hotsreach">熱搜詞</string>
    <string name="soft_update_no">已經是最新的版本</string>
    <string name="soft_update_title">軟件更新</string>
    <string name="soft_update_info">檢測到新版本，立即更新嗎</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍後更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="str_cancal">取消</string>
    <string name="str_login">登錄</string>
    <string name="str_register">注册</string>
    <string name="err_login">登錄名/密碼錯誤</string>
    <string name="ok_login">登入成功</string>
    <string name="err_password_again">二次輸入密碼不相同</string>
    <string name="err_register">注册失败</string>
    <string name="ok_register">注册成功</string>
    <string name="back_two">再按一次退出程式</string>
    <string name="str_map_not_click">請選擇一個商家進行路線規劃</string>
    <string name="error_network">搜索失敗，請檢查網絡連接！</string>
    <string name="error_key">key驗證無效！</string>
    <string name="error_other">未知錯誤，請稍後重試！錯誤</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="fuwuxieyi">服務協定</string>
    <string name="mianze">免責声明</string>
    <string name="hongkong">COPYRIGHT©香港名牌網絡科技有限公司</string>
    
    
    
    
    <string name="str_user_info_name">昵稱</string>
    <string name="str_user_info_yanshi">旧密码</string>
    <string name="str_user_info_xinmiama">新密码</string>
    
    
    <string name="personalinfo">個人資訊</string>
    <string name="finish">完成</string>
    <string name="shurunicheng">請輸入用戶昵稱</string>
    
    <string name="str_user_info_phone">手机</string>
    <string name="str_user_info_sex">性别</string>
    <string name="male">男</string>
    <string name="fmale">女</string>
    
    <string name="str_login_ok">修改成功</string>

</resources>